# amcheckcpp

./: .gitignore  CMakeLists.txt  INSTALL_CENTOS.md  README.md  amcheck  amcheck_spin_configurations.txt  build.bat  build.sh  build_msys2.bat  build_msys2.sh  centos7_setup.sh  clean.sh  debug_spglib.sh  install.sh  install_linux.sh  install_windows.bat  install_windows.ps1  prepare_binaries.bat  prepare_binaries.sh  quick_build_centos7.sh  setup_centos.sh  setup_msys2.sh  upload_to_github.sh  verify_standalone.sh
compiled_binaries/LINUX/: amcheck
compiled_binaries/WINDOWS/: amcheck_spin_configurations.txt
example_input/: BAND_plot.gnu  BaMnO3.poscar  CsCoCl3.poscar  FeF2.poscar  Mn5Si3.poscar  RbCoBr3.poscar  amcheck_spin_configurations.txt
example_poscars/: YMnO3.poscar  amcheck_spin_configurations.txt
include/: amcheck.h  cuda_accelerator.h
src/: amcheck.cpp  band_analysis.cpp  crystal_structure.cpp  cuda_accelerator.cpp  cuda_accelerator.cu  main.cpp  spins.cpp  symmetry_operations.cpp  utils.cpp
